# peachpay-for-woocommerce

./: .editorconfig  .gitignore  .stylelintignore  .stylelintrc.json  deno.json  package-lock.json  package.json  peachpay.php  phpcs.xml  readme.txt  tsconfig.json
.husky/: pre-commit
compatibility/: wc-ppom.php  wc-shared-variation-inventory.php  (+3 more)
localization/: .env.example  const.py  localize  localize.py  po2json.py  po2mo.py  pyproject.toml  update_language_files.py  utils.py
localization/checkout-modal-language-files/: checkout-modal-ar.po  checkout-modal-bg.po  checkout-modal-bs.po  checkout-modal-ca.po  checkout-modal-cs.po  checkout-modal-da.po  checkout-modal-de.po  checkout-modal-el.po  checkout-modal-es.po  checkout-modal-fr.po  checkout-modal-hi.po  checkout-modal-it.po  checkout-modal-ja.po  checkout-modal-ko.po  checkout-modal-lb.po  checkout-modal-nl.po  checkout-modal-pt.po  checkout-modal-ro.po  checkout-modal-ru.po  checkout-modal-sl.po  checkout-modal-sv.po  checkout-modal-th.po  checkout-modal-uk.po  checkout-modal-zh-CN.po  checkout-modal-zh-TW.po  checkout-modal.pot
localization/plugin-js-language-files/: plugin-js-ar.po  plugin-js-bg.po  plugin-js-bs.po  plugin-js-ca.po  plugin-js-cs.po  plugin-js-da.po  plugin-js-de.po  plugin-js-el.po  plugin-js-es.po  plugin-js-fr.po  plugin-js-hi.po  plugin-js-it.po  plugin-js-ja.po  plugin-js-ko.po  plugin-js-lb.po  plugin-js-nl.po  plugin-js-pt.po  plugin-js-ro.po  plugin-js-ru.po  plugin-js-sl.po  plugin-js-sv.po  plugin-js-th.po  plugin-js-uk.po  plugin-js-zh-CN.po  plugin-js-zh-TW.po  plugin-js.pot
(+275 files in other folders)
